html/themes/custom/dc_theme/css/devel.css
/**
 * @file
 * CSS needed during development
 */

/* Display bookmark buttons inline. */
div.flag-bookmark {
  display: inline;
}

/* Margin between dashboard items. */
a.dc-dashboard-button-add-dataset,
table.dc-dashboard-table {
  margin-top: 2.25em;
}

table.dc-dashboard-table > thead > tr > th:last-child {
  width: 19em;
}

/* Make dashboard table captions look like h2. */
table.dc-dashboard-table > caption {
  color: black;
  font-size: 1.728em;
  margin-bottom: -.5em;
}

/* No left padding in first table column on dashboard. */
table.dc-dashboard-table > :not(caption) > * > th:first-child,
table.dc-dashboard-table > :not(caption) > * > td:first-child {
  padding-left: 0;
}

/* fields on data set node view */

.dc-fields .field--label-inline {
  display: flex;
}

.dc-fields .field--label-inline .field__label {
  min-width: 12em;
  max-width: 12em;
  font-weight: normal;
}

.dc-dictionary .field--label-inline {
  display: flex;
}

.dc-dictionary .field--label-inline .field__label {
  min-width: 18em;
  max-width: 18em;
  font-weight: normal;
}

.dc-dictionary .field {
  padding: .75em 0;
  border-bottom: 1px solid #e0e0e0;
}

.dc-dictionary .field:first-child {
  border-top: 1px solid #e0e0e0;
}

.dc-dictionary .field:last-child {
  border-bottom: 0px solid transparent;
}

/* Build page */

/* Edit buttons next to header. */
div.block-bc-dc-edit-button {
  margin-top: 2.25em;
  margin-bottom: 0.5em;
  display: grid;
}
div.block-bc-dc-edit-button > *:first-child {
  grid-column-start: 1;
  grid-row-start: 1;
}
div.block-bc-dc-edit-button > *:last-child {
  grid-column-start: 2;
  grid-row-start: 1;
  justify-self: end;
}

/* No space above first edit button. */
div.block-bc-dc-edit-button:first-child {
  margin-top: 0;
}

/* Width for build page content. */
article.dc-data-set-build-page {
  max-width: 50em;
}

/* Alignment for inline labels. */
article.dc-data-set-build-page .field--label-inline > .field__label {
  min-width: 12em;
  text-align: right;
}

/* Space above block labels. */
article.dc-data-set-build-page div.field--label-above {
  margin-top: 1em;
  margin-bottom: 1em;
}

